# test_technique

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  docker-compose.yml  mypy.ini  pyproject.toml  tickets.db
app/: db.py  main.py
app/tickets/: models.py  repository.py  routers.py  schemas.py
tests/tickets/: conftest.py  test_api.py  test_repo.py
